kubernetes/cilium/resources/proxies/hermes.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin-hermes
  namespace: cilium
spec:
  ports:
    - name: origin
      port: 8788
      targetPort: 8788
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: origin-hermes
  namespace: cilium
  labels:
    kubernetes.io/service-name: origin-hermes
addressType: IPv4
ports:
  - name: origin
    port: 8788
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.89.200
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: origin-hermes
  namespace: cilium
spec:
  parentRefs:
    - name: cilium
      sectionName: https
  hostnames:
    - hermes.dominiksiejak.pl
  rules:
    - backendRefs:
        - name: origin-hermes
          port: 8788
