kubernetes/cilium/resources/proxies/nas.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin-nas
  namespace: cilium
spec:
  ports:
    - name: origin
      port: 5001
      targetPort: 5001
      appProtocol: https
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: origin-nas
  namespace: cilium
  labels:
    kubernetes.io/service-name: origin-nas
addressType: IPv4
ports:
  - name: origin
    port: 5001
    protocol: TCP
    appProtocol: https
endpoints:
  - addresses:
      - 192.168.89.240
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: origin-nas
  namespace: cilium
spec:
  parentRefs:
    - name: cilium
      sectionName: https
  hostnames:
    - nas.dominiksiejak.pl
  rules:
    - backendRefs:
        - name: origin-nas
          port: 5001
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: 192.168.89.240
