kubernetes/cilium/resources/proxies/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin-proxmox
  namespace: cilium
spec:
  ports:
    - name: origin
      port: 8006
      targetPort: 8006
      appProtocol: https
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: origin-proxmox
  namespace: cilium
  labels:
    kubernetes.io/service-name: origin-proxmox
addressType: IPv4
ports:
  - name: origin
    port: 8006
    protocol: TCP
    appProtocol: https
endpoints:
  - addresses:
      - 192.168.89.254
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: origin-proxmox
  namespace: cilium
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      sectionName: https
  hostnames:
    - proxmox.dominiksiejak.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: origin-proxmox
          port: 8006
          weight: 1
