kubernetes/cilium/resources/proxies/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: cilium
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
      appProtocol: https
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: traefik
  namespace: cilium
  labels:
    kubernetes.io/service-name: traefik
addressType: IPv4
ports:
  - name: https
    port: 443
    protocol: TCP
    appProtocol: https
endpoints:
  - addresses:
      - 192.168.89.253
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-1
  namespace: cilium
spec:
  parentRefs:
    - name: cilium
      sectionName: https
  hostnames:
    - n8n.dominiksiejak.pl
    - netbox.dominiksiejak.pl
    - opencode.dominiksiejak.pl
    - portainer.dominiksiejak.pl
    - profilarr.dominiksiejak.pl
    - prowlarr.dominiksiejak.pl
    - qbittorrent.dominiksiejak.pl
    - radarr.dominiksiejak.pl
    - readarr.dominiksiejak.pl
    - sabnzbd.dominiksiejak.pl
    - seerr.dominiksiejak.pl
    - sonarr.dominiksiejak.pl
    - status.dominiksiejak.pl
    - traefik.dominiksiejak.pl
    - unifi.dominiksiejak.pl
    - vaultwarden.dominiksiejak.pl
    - adguard.dominiksiejak.pl
    - adminer.dominiksiejak.pl
    - auth.dominiksiejak.pl
    - bazarr.dominiksiejak.pl
    - calibre-api.dominiksiejak.pl
    - calibre-gui.dominiksiejak.pl
    - calibre.dominiksiejak.pl
    - dozzle.dominiksiejak.pl
    - git.dominiksiejak.pl
    - grafana.dominiksiejak.pl
    - hass-timemachine.dominiksiejak.pl
    - hass.dominiksiejak.pl
    - homepage.dominiksiejak.pl
    - jellyfin.dominiksiejak.pl
    - lan.dominiksiejak.pl
    - metrics.dominiksiejak.pl
    - wealthfolio.dominiksiejak.pl
    - zigbee2mqtt-usb.dominiksiejak.pl
    - zigbee2mqtt-wifi.dominiksiejak.pl
  rules:
    - backendRefs:
        - name: traefik
          port: 443
